# mhrise-helper

./: Cargo.toml
assets/: armors.json  decos.json  part_keywords.json
src/: crawl.rs  main.rs  parse.rs  types.rs
